fix: hide unexpected horizontal scroll

--- a/src/components/main-nav/main-nav.module.scss
+++ b/src/components/main-nav/main-nav.module.scss
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   width: 400px;
+  overflow: hidden;
   font-size: 16px;
   font-weight: 600;
   line-height: 21.79px;
